feat: ajout de fonctions d'extractions dans parser.py et création du fichier node-server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 #Ignorer l'environement virtuel
-
 venv/
 
 # Fichiers Python compilés
@@ -15,3 +14,6 @@ __pycache__/
 # Fichiers système
 .DS_Store
 Thumbs.db
+
+#PDF
+data/
